chandeliers-lus/tests/fail/ui/causality/undef.rs
chandeliers_lus::decl! {
    node foo() returns (i : int);
    let tel;
}

fn main() {}
